codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__floating_agent_menu_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, Rect::new(0, 0, 56, 12))"
---

› keep this draft visible

                                     100% context left

┌────────────────────┐
│ • Main             │
│ • Hegel [worker]   │
│ • Zeno [explorer]  │
│ • Plato [reviewer] │
└────────────────────┘
